--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,24 +1,27 @@
-<%- include('header', {
-  title: account.nickname, 
-  description: "Ezeely view your account details, transactions and make payments."
-}) %>
+<%- include('header') %>
 
-<div class="container" style="margin-top: -100px;">
-  <div class="row">
-    <div class="col-lg-10 mx-auto">
+<div class="h-100 flex-grow-1">
+  <%- include('hero', { title: account.nickname, description: `Ezeely view your
+  account details, transactions and make payments.` }) %>
 
-      <div class="card p-3 bg-light">
-            <%- include('transactions',{account:account}); %>
-            <% if (account.unique_name == 'credit' && account.balance > 0) { %>
-              <div class="col-12 my-2">
-                <a class="btn btn-dark btn-lg fs-5 text-uppercase w-100" href="/services/payment">Make a Payment</a>
-              </div>
-            <% } %>
+  <div class="container h-100 flex-grow-1" style="margin-top: -100px">
+    <div class="row px-4 px-lg-0">
+      <div class="col-lg-10 mx-auto">
+        <div class="card p-3 bg-light">
+          <%- include('transactions',{account:account}); %> <% if
+          (account.unique_name == 'credit' && account.balance > 0) { %>
+          <div class="col-12 my-2">
+            <a
+              class="btn btn-dark btn-lg fs-5 text-uppercase w-100"
+              href="/services/payment"
+              >Make a Payment</a
+            >
+          </div>
+          <% } %>
+        </div>
       </div>
-
     </div>
   </div>
 </div>
 
 <%- include('footer') %>
-
