--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,9 +1,8 @@
- <div class="position-absolute bottom-0 left-0 w-100">
         <footer class="container d-flex align-items-center justify-content-between py-2 mt-4">
-                <a href='/' class="btn btn-light btn-sm " style="min-width: 100px;" type="button">
-                    <i class="bi bi-arrow-return-left me-2"></i> Return Home</a>
-                <div class="text-secondary">© 2023 </div>
-            </div>
+            <a href='/' class="btn btn-light btn-sm " style="min-width: 100px;" type="button">
+                <i class="bi bi-arrow-return-left me-2"></i> Return Home
+            </a>
+            <div class="text-secondary">© 2023</div>
         </footer>
     </body>
 </html>
