--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <div class="container text-white"  style="margin-top: -100px;">
       <div class="row">
         <div class="col-12 col-xl-10 mx-auto">
-          <div class="row px-4 px-xl-0">
+          <div class="row px-2 px-sm-4 px-xl-0">
             <div class="col-lg-4 credit-card"><%- include('summary', { account: accounts.checking }) %></div>
             <div class="col-lg-4 credit-card"><%- include('summary', { account: accounts.savings }) %></div>
             <div class="col-lg-4 credit-card">
