--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -1,4 +1,4 @@
-<div class="cd-grid fw-bold p-3">
+<div class="cd-grid table-header fw-bold p-2 p-sm-3">
   <div>Date</div>
   <div>Type</div>
   <div>Description</div>
@@ -6,7 +6,7 @@
   <div>Amount</div>
 </div>
 <% account.transactions.forEach( transaction => { %>
-<div class="cd-grid p-3 rounded shadow mb-1 bg-white fs-6">
+<div class="cd-grid p-2 p-sm-3 rounded shadow mb-1 bg-white fs-6">
   <div><%= transaction.date %></div>
   <div><%= transaction.type %></div>
   <div><%= transaction.description %></div>
