--- a/views/hero.ejs
+++ b/views/hero.ejs
@@ -1,12 +1,14 @@
 <div class="bg-dark">
-    <div class="container pb-4">
-      <div class="p-5 mb-4 bg-body-secondary rounded-3 shadow <%= title %>">
-        <div class="container-fluid py-5">
-          <div class="text-center">
-            <h1 class="display-5 fw-bold text-white"><%= title %></h1>
-            <p class="col-md-9 fs-5 mx-auto text-secondary"><%= description %></p>
-          </div>
+  <div class="container pb-4">
+    <div
+      class="p-4 p-md-5 mb-4 bg-body-secondary rounded-3 shadow <%= title %>"
+    >
+      <div class="container-fluid py-5">
+        <div class="text-center">
+          <h1 class="display-5 fw-bold text-white"><%= title %></h1>
+          <p class="col-md-9 fs-5 mx-auto text-secondary"><%= description %></p>
         </div>
       </div>
     </div>
+  </div>
 </div>
