--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -5,7 +5,7 @@
   from your credit card.` }) %>
 
   <div class="container" style="margin-top: -100px">
-    <div class="row px-4 px-lg-0">
+    <div class="row px-2 px-sm-4 px-lg-0">
       <div class="col-lg-10 mx-auto">
         <div class="card p-2 p-md-3 p-lg-5 pt-2">
           <div class="card-body">
