--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,7 +4,7 @@
   <%- include('hero', { title: "Profile", description: "" }) %>
 
   <div class="container" style="margin-top: -100px">
-    <div class="row px-4 px-lg-0">
+    <div class="row px-2 px-sm-4 px-lg-0">
       <div class="col-lg-6 mx-auto">
         <div class="card">
           <div class="card-header py-3 px-2 px-lg-4 bg-dark text-white fs-4">
