--- a/views/transfer.ejs
+++ b/views/transfer.ejs
@@ -4,7 +4,7 @@
   <%- include( 'hero', { title: "Tranfer Funds", description: `Make eezy
   transactions by transfering funds fron one account to another` }) %>
   <div class="container" style="margin-top: -100px">
-    <div class="row px-4 px-lg-0">
+    <div class="row px-2 px-sm-4 px-lg-0">
       <div class="col-lg-10 mx-auto">
         <div class="card p-2 p-md-3 p-lg-5">
           <div class="card-body">
